objects/vlocity_ins__PicklistValue__c.object
<CustomObject>
    <description>Represents a value defined for a Vlocity Picklist.</description>
    <fields>
        <fullName>vlocity_ins__Abbreviation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateTimeValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Vlocity Picklist Value. Used to identify the picklist value across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique picklist value identifier can be used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PicklistId__c</fullName>
        <label>Vlocity Picklist</label>
        <referenceTo>vlocity_ins__Picklist__c</referenceTo>
        <relationshipName>PicklistValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TextValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasureName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <formula>IF(  ISPICKVAL(vlocity_ins__PicklistId__r.vlocity_ins__DataType__c, &apos;Date Time&apos;) ,  TEXT(vlocity_ins__DateTimeValue__c) ,
    IF( ISPICKVAL(vlocity_ins__PicklistId__r.vlocity_ins__DataType__c, &apos;Date&apos;) ,  TEXT(vlocity_ins__DateValue__c) ,
        IF( ISPICKVAL(vlocity_ins__PicklistId__r.vlocity_ins__DataType__c, &apos;Text&apos;),  vlocity_ins__TextValue__c ,
            IF( ISPICKVAL(vlocity_ins__PicklistId__r.vlocity_ins__DataType__c, &apos;Number&apos;) ,  (TEXT(vlocity_ins__NumberValue__c) &amp; vlocity_ins__UnitOfMeasureName__c) ,
                IF( ISPICKVAL(vlocity_ins__PicklistId__r.vlocity_ins__DataType__c, &apos;Boolean&apos;)  ,  IF( vlocity_ins__BooleanValue__c = true  ,  &apos;true&apos; , &apos;false&apos; ), null )))))</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Picklist Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Picklist Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>